--- a/styles/section.css
+++ b/styles/section.css
@@ -2,6 +2,33 @@
   img {
     height: 100%;
     object-fit: cover;
+  }
+
+  .card {
     border-radius: 4px;
+    overflow: hidden;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      top: 50%;
+      background: linear-gradient(180deg, transparent 0%, #020617 100% );
+    }
+  /* display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  padding: 72px 24px 24px;
+  gap: 8px;
+  
+  position: absolute;
+  height: 208px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px; */
+  
+  /* background: linear-gradient(180deg, rgba(2, 6, 23, 0) 0%, #020617 100%); */
   }
 }
+
